# maze

./: .gitignore  CMakeLists.txt  README.md  grid.h  main.cpp  path_finder.h  test.cpp
include/: grid.h  path_finder.h
src/: CMakeLists.txt  grid.cpp  grid.h  main.cpp  path_finder.cpp  path_finder.h
test/: CMakeLists.txt  catch.hpp  test.cpp  test.h
